src/components/authentication/SignupForm/SignupForm.module.css
.signup-form {
  max-width: 600px;
  margin: 0 auto;
}
.input-container {
  border-bottom: 1px solid var(--white);
}
.input-container:focus-within {
  border-bottom: 3px solid var(--white);
}
.auth-input {
  font-size: 2.4rem;
  line-height: 2.88rem;
  width: 100%;
  color: var(--white);
  background-color: var(--black);
  padding: 0;
  margin: 2.3rem 0 1rem 0;
  border: none;
}
.auth-input:focus {
  outline: none;
}
.auth-input::placeholder {
  color: var(--white);
  opacity: 50%;
}
.password-container {
  position: relative;
}
.eye-icons {
  position: absolute;
  top: 2.55rem;
  right: .8rem;
}
.create-acct-btn-container {
  margin: 9.2rem 0 7.2rem 0;
  display: flex;
  justify-content: center;
}

